# yt-snip

./: .SRCINFO  .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  flake.nix  main.cc  yt-snip
.github/: README.md
.github/workflows/: build.yml  release.yml
include/yt-snip/: downloader.hpp
src/: main.cpp
src/core/: downloader.cpp
